@@ -1,3 +1,11 @@
+2016-12-17 belangeo <belangeo@gmail.com>
+
+    * TrigFunc and Pattern now accept tuple as arg argument (fixed issue #90).
+
+2016-12-15 belangeo <belangeo@gmail.com>
+
+    * Fixed portaudio suggested latency for realtime performance.
+
 2016-12-08 belangeo <belangeo@gmail.com>
 
     * Upgraded version number to 0.8.1.
